--- a/index.html
+++ b/index.html
@@ -98,6 +98,49 @@
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 						</div>
 
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic02.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic03.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic02.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic03.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+						</div>
+
+						<div class="col-12 col-12-medium">
+							<!-- <span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
+							<h3>Magna feugiat lorem</h3>
+							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p> -->
+							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/BHACKCNDMW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div>
+
 					</div>
 				</div>
 			</section>
@@ -186,9 +229,9 @@
 					</form>
 					<p style="margin-bottom: 10px;">Также мы в социальных сетях</p>
 					<ul class="icons">
-						<li><a href="https://t.me/+McuOaWpaTT44ZWRi" class="icon brands alt fa-telegram"> Наш канал</a></li>
-						<li><a href="https://www.instagram.com/andronov_alexandr/" class="icon brands alt fa-instagram"> Александр</a></li>
-						<li><a href="https://www.instagram.com/alina.andronova_/" class="icon brands alt fa-instagram"> Алина</a></li>
+						<li><a href="https://t.me/+McuOaWpaTT44ZWRi" class="icon brands alt fa-telegram" target="blank_"> Наш канал</a></li>
+						<li><a href="https://www.instagram.com/andronov_alexandr/" class="icon brands alt fa-instagram" target="blank_"> Александр</a></li>
+						<li><a href="https://www.instagram.com/alina.andronova_/" class="icon brands alt fa-instagram" target="blank_"> Алина</a></li>
 					</ul>
 				</div>
 
@@ -561,10 +604,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<div style="margin-bottom: 10px;">Поделитесь этим сайтом с друзьями</div>
 				<ul class="icons">
-					<li><a href="https://www.facebook.com/sharer/sharer.php?u=" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="https://vk.com/share.php?url=" class="icon brands alt fa-vk"><span class="label">vk</span></a></li>
-					<li><a href="https://wa.me/?text=" class="icon brands alt fa-whatsapp"><span class="label">whatsapp</span></a></li>
-					<li><a href="https://t.me/share/url?url=" class="icon brands alt fa-telegram"><span class="label">telegram</span></a></li>
+					<li><a href="https://www.facebook.com/sharer/sharer.php?u=ywam-rostov.github.io/alexandr_and_alina" class="icon brands alt fa-facebook-f" target="blank_"><span class="label">Facebook</span></a></li>
+					<li><a href="https://vk.com/share.php?url=ywam-rostov.github.io/alexandr_and_alina" class="icon brands alt fa-vk" target="blank_"><span class="label">vk</span></a></li>
+					<li><a href="https://wa.me/?text=ywam-rostov.github.io/alexandr_and_alina" class="icon brands alt fa-whatsapp" target="blank_"><span class="label">whatsapp</span></a></li>
+					<li><a href="https://t.me/share/url?url=ywam-rostov.github.io/alexandr_and_alina" class="icon brands alt fa-telegram" target="blank_"><span class="label">telegram</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Alexandr & Alina</li><li>Design: <a href="https://panda-development.ru" target="blank_">Panda development studio</a></li>
