--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major far fa-heart"></span>
-					<h1>Здравствуйте! <br>Здесь вы можете посмотреть информацию <br>о нашем служении. <br><stong>Александр и Алина Андроновы</stong></h1>
-					<p>Итак идите, научите все народы,<br> крестя их во имя Отца и Сына и Святаго Духа. <br>Евангелие от Матфея 28:19</p>
+					<h1>Здравствуйте! <br>Здесь вы можете посмотреть информацию <br>о нашем служении. <br style="display: block;"><stong>Александр и Алина Андроновы</stong></h1>
+					<p>Итак идите, научите все народы,<br> крестя их во имя Отца и Сына и Святого Духа. <br>Евангелие от Матфея 28:19</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Смотреть далее</a></li>
 					</ul>
@@ -31,12 +31,27 @@
 							<header class="major">
 								<h2>Обучение в школе DTS<br> (курс ученичества)</h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
+							<p>Курс ученичества - это школа, в которой проходит подготовка молодых миссионеров. Длительность обучения - 5 месяцев.<br>
+								В начале, обучение представляет собой теоретическую часть, длительностью в 2 месяца, в которой студентов обучают основам миссионерской деятельности, а также в это время со студентами производится сильная духовная работа: выстраивание взаимоотношений с Богом, работа в команде. <br>
+								Далее следуюет 3 месяца практики. В этот период все студенты деляется на несколько команд, которые поедут в отдаленные уголки разных стран, где есть нужды разного характера. Кто-то подете в Кению строить школу и проповедовать Евангелие, кто-то поедет в деревни на горах в Непале.<br>
+								Мы с супругой поедем в одну из деревень Египта служить взрослым, детям и молодежи, у которых есть жажда по Божьему слову, но туда редко приходят проповедники.
+							 </p>
 						</div>
 						<div  style="margin: 0; padding: 0;" class="col-6 col-12-medium imp-medium">
 							<span style="padding: 0; margin: 0;" class="image fit"><img src="images/a_and_a.png" alt="" /></span>
 						</div>
 					</div>
+
+						<div style="margin-top: 0; margin-bottom: 0;" class="learning_dts_2 col-6 col-12-medium">
+								<header class="major">
+									<h2>Как мы решились на это?</h2>
+								</header>
+								<p>Встречаю много людей, которые думают, что нам за это хорошо платят. Не совсем! Каждый студент сам оплачивает весь курс обучения. Да! Именно так. Школа построена таким образом, что студенты должны сами оплатить свое служение.<br>
+									И решиться на такой шаг - дело не легкое, но однажды мы почувствовали призыв от Бога. Это было в мае на коференции для повышения эффективности лидеров. Бог в то время неоднократно говорил нам о необходимости идти на курс ученичества DTS.
+									Было много турдностей и препятствий в подготовке, но мы послушались голоса Божьего и с помощью Бога, родных и близких сделали это. Теперь мы в школе DTS.<br>
+									Трудности, с которыми мы столкнулись имели обычный характер: болезни перед отъездом, финансовое положение, отношения с людьми и тд. Но Бог провел нас Своей рукой через все преграды и продолжает вести нас.
+								</p>
+						</div>
 				</div>
 			</section>
 
@@ -49,9 +64,30 @@
 								<h2>Что мы умеем и <br>
 								чем можем быть полезны? </h2>
 							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
+							<br>
+							<header class="header_for_mobile major">
+								<h3>Александр </h3>
+							</header>
+							<p><b>Образование, навыки, знания, дары:</b>
+								<ul>
+									<li>Преподаватель по классу музыкальных инструментов (труба, акустическая гитара, электро-гитара, фортепиано, ударные инструменты)</li>
+									<li>Программирование (разработка сайтов)</li>
+									<li>Душепопечение</li>
+								</ul></p>
+							<p>Один из основных даров - преподавание. Выстраивание дружеских и глубоких отношений с учеником. В моем случае преподавание не носит классический характер данного слова, но глубокий, духовный. Ближе к развитию отношений</p>
+							<!-- <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p> -->
+							<header class="header_for_mobile major">
+								<h3>Алина </h3>
+							</header>
+							<p><b>Образование, навыки, знания, дары:</b>
+								<ul>
+									<li>Художник</li>
+									<li>Графический дизайнер</li>
+									<li>Smm-специалист (продвижение в социальных сетях)</li>
+									<li>Душепопечение</li>
+								</ul></p>
+							<p>Алина - невероятно творческая личность и всегда, где есть место для творчества - там Алина.</p>
+							<!-- <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p> -->
 						</div>
 						<div class="col-6 col-12-medium">
 							<ul class="we_can major-icons">
@@ -78,7 +114,7 @@
 					<header class="major">
 						<h2>Фото и видео с наших мероприятий</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<p>Часть нашего служения вы можете посмотреть здесь, но более подробно о том, что у нас происходит можно посмотреть в <a href="https://t.me/+McuOaWpaTT44ZWRi">телеграм канале</a></p>
 					<div class="row gtr-150">
 
 						<div class="col-4 col-12-medium">
@@ -139,7 +175,7 @@
 							<!-- <span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
 							<h3>Magna feugiat lorem</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p> -->
-							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/BHACKCNDMW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/PZYbhPiGEqs?rel=0&color=white&volume=0&vol=0&mute=1&showinfo=1&autoplay=1&playsinline=1" title="Мое служение людям" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 
 					</div>
