--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<p>Встречаю много людей, которые думают, что нам за это хорошо платят. Не совсем! Каждый студент сам оплачивает весь курс обучения. Да! Именно так. Школа построена таким образом, что студенты должны сами оплатить свое служение.<br>
 									И решиться на такой шаг - дело не легкое, но однажды мы почувствовали призыв от Бога. Это было в мае на коференции для повышения эффективности лидеров. Бог в то время неоднократно говорил нам о необходимости идти на курс ученичества DTS.
 									Было много турдностей и препятствий в подготовке, но мы послушались голоса Божьего и с помощью Бога, родных и близких сделали это. Теперь мы в школе DTS.<br>
-									Трудности, с которыми мы столкнулись имели обычный характер: болезни перед отъездом, финансовое положение, отношения с людьми и тд. Но Бог провел нас Своей рукой через все преграды и продолжает вести нас.
+									Трудности, с которыми мы столкнулись перед переездом имели такой характер: болезни перед отъездом, финансовое положение, отношения с людьми и тд. Но Бог провел нас Своей рукой через все преграды и продолжает вести нас.
 								</p>
 						</div>
 				</div>
@@ -118,57 +118,57 @@
 					<div class="row gtr-150">
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_1.jpg" alt="" /></span>
+							<h3>Служение русскоязычным людям в Армении</h3>
+							<p>На данный момент, пока мы находимся в Армении, мы с командой организовали English club для русских в Армении и тем самым выстраиваем отношения.</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_2.jpg" alt="" /></span>
+							<h3>Служение в поместных церквях</h3>
+							<p>Местные церкви открыты для того, чтобы им помогали в разных служениях.</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_3.jpg" alt="" /></span>
+							<h3>Армянский вечер</h3>
+							<p>Друзья из Армении провели для нас потрясающий национальный вечер, в котором мы погрузились в атмосферу Армении.</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_11.jpg" alt="" /></span>
+							<h3>Ценность семьи</h3>
+							<p>Семья - одна из основных ценностей организации "Молодежь с миссией".<br>Несмотря на полную загрузку, не забываем ходить на свидания.</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_5.jpg" alt="" /></span>
+							<h3>Тренировка команды, с которой мы поедем на практику</h3>
+							<p>Сейчас у нас проходит, обучение, теоретическая часть. Этот день мы посвятили командному сплочению. Были сложные игры, которые показали нам как важно уважать друг друга в команде и уметь видеть свои недостатки и работать над этим.</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_6.jpg" alt="" /></span>
+							<h3>Медиа служение</h3>
+							<p>В нашей команде образовался отдел медиа служения, за который отвечает Алина и вносит свой вклад</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_7.jpg" alt="" /></span>
+							<h3>Служение в местной баптистской церкви</h3>
+							<p>Слово о пожертвованиях.</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_8.jpg" alt="" /></span>
+							<h3>Ведение прославления</h3>
+							<p>Но настанет время и настало уже, когда поклоняющиеся будут поклоняться в духе и истине.</p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_9.jpg" alt="" /></span>
+							<h3>Поддержка</h3>
+							<p>Команда - это не группа людей, команда - это семья.</p>
 						</div>
 
 						<div class="col-12 col-12-medium">
@@ -241,7 +241,7 @@
 					<div class="col-6 col-12-medium">
 				<h3>Подпишитесь на новостную рассылку
 				и вы будете получать персональные письма о нашей деятельности</h3>
-				<form method="POST" action="https://cp.unisender.com/ru/subscribe?hash=63ooyjz58d3jck9fmgxi65pj7jx9u718hdarf5fnhfkzfzpe534qy" name="subscribtion_form">
+				<form method="POST" action="https://cp.unisender.com/ru/subscribe?hash=63ooyjz58d3jck9fmgxi65pj7jx9u718hdarf5fnhfkzfzpe534qy" target="blank_" name="subscribtion_form">
 					<div class="row gtr-uniform gtr-50">
 						<div class="col-12 col-12-xsmall">
 							<input type="text" name="demo-name" id="demo-name" value="" required placeholder="Ваше имя" />
