--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 							</header>
 							<p>Делая это, вы становитесь соучастником развития Царства Божьего</p>
 							<ul class="actions special">
-								<li><a href="https://www.tinkoff.ru/collectmoney/crowd/kolodeznikov.oleg2/jry4657299/?short_link=9ZOM3FRMTCL&httpMethod=GET" target="blank_" class="button wide">Поддержать</a></li>
+								<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
 							</ul>
 							<p class="qr_code_for_desktop"><img style="width: 50%;" src="images/qrcod_support.svg"></svg></img>
 						</div>
