--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 									Было много турдностей и препятствий в подготовке, но мы послушались голоса Божьего и с помощью Бога, родных и близких сделали это. Теперь мы в школе DTS.<br>
 									Трудности, с которыми мы столкнулись перед переездом имели такой характер: болезни перед отъездом, финансовое положение, отношения с людьми и тд. Но Бог провел нас Своей рукой через все преграды и продолжает вести нас.
 								</p>
+								<ul class="actions special">
+									<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
+								</ul>
 						</div>
 				</div>
 			</section>
@@ -97,6 +100,9 @@
 								<li><span class="icon solid style4 major fa-cog"></span></li>
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
 								<li><span class="icon solid style6 major fa-calendar"></span></li>
+							</ul>
+							<ul class="actions special">
+								<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
 							</ul>
 						</div>
 					</div>
