--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 									Было много турдностей и препятствий в подготовке, но мы послушались голоса Божьего и с помощью Бога, родных и близких сделали это. Теперь мы в школе DTS.<br>
 									Трудности, с которыми мы столкнулись перед переездом имели такой характер: болезни перед отъездом, финансовое положение, отношения с людьми и тд. Но Бог провел нас Своей рукой через все преграды и продолжает вести нас.
 								</p>
-								<ul class="actions special">
-									<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
-								</ul>
 						</div>
+						<ul class="actions special">
+							<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
+						</ul>
 				</div>
 			</section>
 
@@ -181,7 +181,7 @@
 							<!-- <span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
 							<h3>Magna feugiat lorem</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p> -->
-							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/PZYbhPiGEqs?rel=0&color=white&volume=0&vol=0&mute=1&showinfo=1&autoplay=1&playsinline=1" title="Мое служение людям" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/kVc3WaVz54Q?rel=0&color=white&volume=0&vol=0&mute=1&showinfo=1&autoplay=1&playsinline=1" title="Мое служение людям" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 
 					</div>
