--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>Alexandr & Alina | missionaries</title>
 		<meta charset="utf-8" />
+
+		<meta name="description" content="Александр и Алина Андроновы | Информация о миссии, о служении людям, обучении. Подпишитесь на email рассылку">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" type="image/x-icon" href="images/World.png">
@@ -34,8 +36,8 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major far fa-heart"></span>
-					<h1>Здравствуйте! <br>Здесь вы можете посмотреть информацию <br>о нашем служении. <br style="display: block;"><stong>Александр и Алина Андроновы</stong></h1>
-					<p>Итак идите, научите все народы,<br> крестя их во имя Отца и Сына и Святого Духа. <br>Евангелие от Матфея 28:19</p>
+					<h1>Привет! <br>Мы - Александр и Алина Андроновы. <br style="display: block;"><stong>Здесь вы можете посмотреть информацию <br>о нашем служении.</stong></h1>
+					<p>"Итак идите, научите все народы,<br> крестя их во имя Отца и Сына и Святого Духа." <br>(Евангелие от Матфея 28:19)</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Смотреть далее</a></li>
 					</ul>
@@ -48,13 +50,14 @@
 					<div class="row gtr-150">
 						<div class="learning_dts col-6 col-12-medium">
 							<header class="major">
-								<h2>Обучение в школе DTS<br> (курс ученичества)</h2>
+								<h2>Обучение в миссионерской школе DTS<br> ("Курс ученичества")</h2>
 							</header>
-							<p>Курс ученичества - это школа, в которой проходит подготовка молодых миссионеров. Длительность обучения - 5 месяцев.<br>
-								В начале, обучение представляет собой теоретическую часть, длительностью в 2 месяца, в которой студентов обучают основам миссионерской деятельности, а также в это время со студентами производится сильная духовная работа: выстраивание взаимоотношений с Богом, работа в команде. <br>
-								Далее следуюет 3 месяца практики. В этот период все студенты деляется на несколько команд, которые поедут в отдаленные уголки разных стран, где есть нужды разного характера. Кто-то подете в Кению строить школу и проповедовать Евангелие, кто-то поедет в деревни на горах в Непале.<br>
-								Мы с супругой поедем в одну из деревень Египта служить взрослым, детям и молодежи, у которых есть жажда по Божьему слову, но туда редко приходят проповедники.
-							 </p>
+							<p>«Курс ученичества» – это школа, где проходит подготовка молодых миссионеров. Срок обучения – пять месяцев. Наше обучение началось здесь в сентябре 2022 г. Этому предшествовали месяцы приготовлений, молитв, решений и поисков поддержки.<br>
+В первый блок обучения (он длится два месяца) входит интенсивное изучение теории. В это время мы закладываем фундамент своего будущего служения, изучаем основы миссионерства, знакомимся с нашим миссионерским полем, где нам предстоит трудиться. Проводится мощная духовная работа внутри нас и в нашем окружении: мы выстраиваем отношения с Богом, учимся работать в команде. Мы почти приблизились к концу первого блока обучения и с нетерпением ожидаем следующего.<br>
+Второй блок – это три месяца практического служения. На этом этапе наш курс делится на несколько команд, которые отправляются в разные страны, где есть различные нужды и ожидания. Кто-то поедет в Кению – строить школу и проповедовать Евангелие, кто-то будет служить в горах в деревне в Непале. <br>
+Мы (Александр и Алина) поедем в одну из деревень Египта служить взрослым, детям и молодежи, которые жаждут услышать Божье Слово, но, к сожалению, туда редко приезжают проповедники. Мы от всего сердца постараемся восполнить эту нужду и молимся о том, чтобы Бог максимально эффективно использовал нас в это время в Египте. <br>
+Разумеется, для каждого из блоков требуется финансовая поддержка. Для удобства мы создали <a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_">целевой счет</a>. Мы с благодарностью принимаем любой дар и молимся о благословениях для всех, кто разделяет наше видение и помогает нам. Вы можете вместе с нами послужить людям в других странах! Поэтому добро пожаловать в ряды наших партнеров. Мы также будем признательны, если вы расскажете о нас своим друзьям.<br>
+</p>
 						</div>
 						<div  style="margin: 0; padding: 0;" class="col-6 col-12-medium imp-medium">
 							<span style="padding: 0; margin: 0;" class="image fit"><img src="images/a_and_a.png" alt="" /></span>
@@ -65,11 +68,9 @@
 								<header class="major">
 									<h2>Как мы решились на это?</h2>
 								</header>
-								<p>Встречаю много людей, которые думают, что нам за это хорошо платят. Не совсем! Каждый студент сам оплачивает весь курс обучения. Да! Именно так. Школа построена таким образом, что студенты должны сами оплатить свое служение.<br>
-									И решиться на такой шаг - дело не легкое, но однажды мы почувствовали призыв от Бога. Это было в мае на коференции для повышения эффективности лидеров. Бог в то время неоднократно говорил нам о необходимости идти на курс ученичества DTS.
-									Было много турдностей и препятствий в подготовке, но мы послушались голоса Божьего и с помощью Бога, родных и близких сделали это. Теперь мы в школе DTS.<br>
-									Трудности, с которыми мы столкнулись перед переездом имели такой характер: болезни перед отъездом, финансовое положение, отношения с людьми и тд. Но Бог провел нас Своей рукой через все преграды и продолжает вести нас.
-								</p>
+								<p>Мы часто встречаем людей, которые думают, что нам за это хорошо платят. Это не так. Каждый студент сам оплачивает весь курс обучения. Да! Именно так. «Курс ученичества» построен таким образом, что студенты должны уметь сами находить средства и поддержку для своего служения.<br>
+Решиться на такой шаг – дело действительно нелегкое. Но однажды мы почувствовали призыв от Бога. Это было в мае на конференции для повышения эффективности лидеров. Бог в то время неоднократно говорил нам о необходимости пройти «Курс ученичества» DTS. Было много трудностей и препятствий в подготовке, но мы следовали за голосом Бога и с Божьей помощью, при поддержке родных и близких, сделали этот важный шаг. Теперь мы в школе DTS, и благодарим за это Господа и всех, кто нам помог.<br>
+	</p>
 						</div>
 						<ul class="actions special">
 							<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
@@ -96,7 +97,7 @@
 									<li>Программирование (разработка сайтов)</li>
 									<li>Душепопечение</li>
 								</ul></p>
-							<p>Один из основных даров - преподавание. Выстраивание дружеских и глубоких отношений с учеником. В моем случае преподавание не носит классический характер данного слова, но глубокий, духовный. Ближе к развитию отношений</p>
+							<p>Один из основных даров - преподавание, учительство. Выстраивание дружеских и глубоких отношений с учеником. В моем случае преподавание не носит классический характер - я стараюсь создавать глубокие духовные отношения с обучаемым в рамках наставничества.</p>
 							<!-- <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p> -->
 							<header class="header_for_mobile major">
 								<h3>Алина </h3>
@@ -104,11 +105,11 @@
 							<p><b>Образование, навыки, знания, дары:</b>
 								<ul>
 									<li>Художник</li>
-									<li>Графический дизайнер</li>
+									<li>Графический дизайнер (фирменный стиль, айдентика, полиграфия, оформление интерьеров и т.п)</li>
 									<li>Smm-специалист (продвижение в социальных сетях)</li>
 									<li>Душепопечение</li>
 								</ul></p>
-							<p>Алина - невероятно творческая личность и всегда, где есть место для творчества - там Алина.</p>
+							<p>Многолетний опыт сотрудничества с ресторанным бизнесом, салонами красоты. Знание тонкостей работы с соцмедиа. Есть опыт ведения собственного дела. Я – творческая личность, поэтому там, где есть место для креатива, там и я!</p>
 							<!-- <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p> -->
 						</div>
 						<div class="col-6 col-12-medium">
@@ -305,7 +306,7 @@
 							<header class="major">
 								<h3>Также у вас есть возможность поддержать нашу семью финансами.</h3>
 							</header>
-							<p>Делая это, вы становитесь соучастником развития Царства Божьего</p>
+							<p>Станьте участником распространения Божьего Царства вместе с нами!</p>
 							<ul class="actions special">
 								<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
 							</ul>
