--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 			</section>
 
 		<!-- One -->
-			<section style="padding: 0;" id="one" class="main style1">
-				<div style="width: 100%; padding-right: 0; margin-right: 0;" class="container">
-					<div class="row gtr-150">
-						<div class="learning_dts col-6 col-12-medium">
-							<header class="major">
+		<section id="one" class="main style1">
+			<div style="width: 100%;" class="container main_div_1">
+				<div class="row gtr-150">
+					<div class="learning_dts col-6 col-12-medium">
+						<header class="major">
 								<h2>Обучение в миссионерской школе DTS<br> ("Курс ученичества")</h2>
 							</header>
 							<p>«Курс ученичества» – это школа, где проходит подготовка молодых миссионеров. Срок обучения – пять месяцев. Наше обучение началось здесь в сентябре 2022 г. Этому предшествовали месяцы приготовлений, молитв, решений и поисков поддержки.<br>
