--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
 								</ul></p>
 							<p>Многолетний опыт сотрудничества с ресторанным бизнесом, салонами красоты. Знание тонкостей работы с соцмедиа. Есть опыт ведения собственного дела. Я – творческая личность, поэтому там, где есть место для креатива, там и я!</p>
 							<!-- <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p> -->
+							<div class="row gtr-150">
+								<ul class="actions special">
+									<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
+								</ul>
+							</div>
 						</div>
 						<div class="col-6 col-12-medium">
 							<ul class="we_can major-icons">
@@ -120,9 +125,6 @@
 								<li><span class="icon solid style4 major fa-cog"></span></li>
 								<li><span class="icon solid style5 major fa-desktop"></span></li>
 								<li><span class="icon solid style6 major fa-calendar"></span></li>
-							</ul>
-							<ul class="actions special">
-								<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
 							</ul>
 						</div>
 					</div>
