--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 В первый блок обучения (он длится два месяца) входит интенсивное изучение теории. В это время мы закладываем фундамент своего будущего служения, изучаем основы миссионерства, знакомимся с нашим миссионерским полем, где нам предстоит трудиться. Проводится мощная духовная работа внутри нас и в нашем окружении: мы выстраиваем отношения с Богом, учимся работать в команде. Мы почти приблизились к концу первого блока обучения и с нетерпением ожидаем следующего.<br>
 Второй блок – это три месяца практического служения. На этом этапе наш курс делится на несколько команд, которые отправляются в разные страны, где есть различные нужды и ожидания. Кто-то поедет в Кению – строить школу и проповедовать Евангелие, кто-то будет служить в горах в деревне в Непале. <br>
 Мы (Александр и Алина) поедем в одну из деревень Египта служить взрослым, детям и молодежи, которые жаждут услышать Божье Слово, но, к сожалению, туда редко приезжают проповедники. Мы от всего сердца постараемся восполнить эту нужду и молимся о том, чтобы Бог максимально эффективно использовал нас в это время в Египте. <br>
-Разумеется, для каждого из блоков требуется финансовая поддержка. Для удобства мы создали <a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_">целевой счет</a>. Мы с благодарностью принимаем любой дар и молимся о благословениях для всех, кто разделяет наше видение и помогает нам. Вы можете вместе с нами послужить людям в других странах! Поэтому добро пожаловать в ряды наших партнеров. Мы также будем признательны, если вы расскажете о нас своим друзьям.<br>
+Разумеется, для каждого из блоков требуется финансовая поддержка. Для удобства мы создали <a href="https://www.tinkoff.ru/cf/3pVnjAVjEoL" target="blank_">целевой счет</a>. Мы с благодарностью принимаем любой дар и молимся о благословениях для всех, кто разделяет наше видение и помогает нам. Вы можете вместе с нами послужить людям в других странах! Поэтому добро пожаловать в ряды наших партнеров. Мы также будем признательны, если вы расскажете о нас своим друзьям.<br>
 </p>
 						</div>
 						<div  style="margin: 0; padding: 0;" class="col-6 col-12-medium imp-medium">
@@ -73,7 +73,7 @@
 	</p>
 						</div>
 						<ul class="actions special">
-							<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
+							<li><a href="https://www.tinkoff.ru/cf/3pVnjAVjEoL" target="blank_" class="button wide">Поддержать</a></li>
 						</ul>
 				</div>
 			</section>
@@ -113,7 +113,7 @@
 							<!-- <p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p> -->
 							<div class="row gtr-150">
 								<ul class="actions special">
-									<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
+									<li><a href="https://www.tinkoff.ru/cf/3pVnjAVjEoL" target="blank_" class="button wide">Поддержать</a></li>
 								</ul>
 							</div>
 						</div>
@@ -310,7 +310,7 @@
 							</header>
 							<p>Станьте участником распространения Божьего Царства вместе с нами!</p>
 							<ul class="actions special">
-								<li><a href="https://www.tinkoff.ru/cf/5eEBgjxFDDm" target="blank_" class="button wide">Поддержать</a></li>
+								<li><a href="https://www.tinkoff.ru/cf/3pVnjAVjEoL" target="blank_" class="button wide">Поддержать</a></li>
 							</ul>
 							<p class="qr_code_for_desktop"><img style="width: 50%;" src="images/qrcod_support.svg"></svg></img>
 						</div>
