--- a/index.html
+++ b/index.html
@@ -143,68 +143,133 @@
 						<h2>Фото и видео с наших мероприятий</h2>
 					</header>
 					<p>Часть нашего служения вы можете посмотреть здесь, но более подробно о том, что у нас происходит можно посмотреть в <a href="https://t.me/+McuOaWpaTT44ZWRi">телеграм канале</a></p>
-					<div class="row gtr-150">
+					<div class="row gtr-150 section_show_more">
 
 						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_12.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_13.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_14.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="row gtr-150 hide_content">
+						<div class="col-4 col-12-medium">
 							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_1.jpg" alt="" /></span>
-							<h3>Служение русскоязычным людям в Армении</h3>
-							<p>На данный момент, пока мы находимся в Армении, мы с командой организовали English club для русских в Армении и тем самым выстраиваем отношения.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_2.jpg" alt="" /></span>
-							<h3>Служение в поместных церквях</h3>
-							<p>Местные церкви открыты для того, чтобы им помогали в разных служениях.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_3.jpg" alt="" /></span>
-							<h3>Армянский вечер</h3>
-							<p>Друзья из Армении провели для нас потрясающий национальный вечер, в котором мы погрузились в атмосферу Армении.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_11.jpg" alt="" /></span>
-							<h3>Ценность семьи</h3>
-							<p>Семья - одна из основных ценностей организации "Молодежь с миссией".<br>Несмотря на полную загрузку, не забываем ходить на свидания.</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_18.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_19.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_20.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_21.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_22.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_5.jpg" alt="" /></span>
-							<h3>Тренировка команды, с которой мы поедем на практику</h3>
-							<p>Сейчас у нас проходит, обучение, теоретическая часть. Этот день мы посвятили командному сплочению. Были сложные игры, которые показали нам как важно уважать друг друга в команде и уметь видеть свои недостатки и работать над этим.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_6.jpg" alt="" /></span>
-							<h3>Медиа служение</h3>
-							<p>В нашей команде образовался отдел медиа служения, за который отвечает Алина и вносит свой вклад</p>
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_15.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_16.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_17.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
+						</div>
+
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_11.jpg" alt="" /></span>
+							<h3></h3>
+							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_7.jpg" alt="" /></span>
-							<h3>Служение в местной баптистской церкви</h3>
-							<p>Слово о пожертвованиях.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_8.jpg" alt="" /></span>
-							<h3>Ведение прославления</h3>
-							<p>Но настанет время и настало уже, когда поклоняющиеся будут поклоняться в духе и истине.</p>
+							<h3></h3>
+							<p></p>
 						</div>
 
-						<div class="col-4 col-12-medium">
+						<!-- <div class="col-4 col-12-medium">
 							<span class="image fit"><img class="thumbnail" id="myImg" src="images/photo_9.jpg" alt="" /></span>
-							<h3>Поддержка</h3>
-							<p>Команда - это не группа людей, команда - это семья.</p>
+							<h3></h3>
+							<p></p>
+						</div> -->
+
+						<!-- закрывашка для hide_content -->
+						</div>
+						<!-- button show more -->
+						<div class="button_show_more center_button">
+							<button class="show_more">Показать еще</button>
 						</div>
 
-						<div class="col-12 col-12-medium">
-							<!-- <span class="image fit"><img class="thumbnail" id="myImg" src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p> -->
+						<!-- <div class="col-12 col-12-medium">
 							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/kVc3WaVz54Q?rel=0&color=white&volume=0&vol=0&mute=1&showinfo=1&autoplay=1&playsinline=1" title="Мое служение людям" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
+						</div> -->
 
 					</div>
 				</div>
