--- a/index.html
+++ b/index.html
@@ -267,9 +267,9 @@
 							<button class="show_more">Показать еще</button>
 						</div>
 
-						<!-- <div class="col-12 col-12-medium">
+						<div class="col-12 col-12-medium">
 							<iframe class="main_video_1" width="100%" src="https://www.youtube.com/embed/kVc3WaVz54Q?rel=0&color=white&volume=0&vol=0&mute=1&showinfo=1&autoplay=1&playsinline=1" title="Мое служение людям" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div> -->
+						</div>
 
 					</div>
 				</div>
